# voxara

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: installer.yml  release.yml
scripts/: bump-version.cjs
src/: App.tsx  index.css  main.tsx  router.tsx  store.ts
src-tauri/: 2  Cargo.toml  dragabyte.settings.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: scan.toml
src-tauri/src/: main.rs
src/components/: AlertModal.tsx  ConfirmModal.tsx  DetailsModal.tsx  InputModal.tsx
src/features/bulk-rename/: BulkRenameView.tsx  renameLogic.ts  types.ts
src/features/remote/: RemotePanel.tsx  api.ts  types.ts
src/features/scan/: ExportModal.tsx  ScanTree.tsx  ScanView.tsx  Treemap.tsx  api.ts  exportUtils.tsx  types.ts
src/features/scan/pdf/: ScanReportPdf.tsx
src/features/settings/: SettingsPanel.tsx  api.ts  types.ts
src/lib/: fileIcons.ts  updater.ts  utils.ts
