[package]
name = "voxara"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
jwalk = "0.8"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.6.0"
winreg = "0.55.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata]

[package.metadata.tauri]
