[package]
name = "voxara"
version = "0.2.5"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
jwalk = "0.8"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata]

[package.metadata.tauri]
